# mycroft-gui

./: .gitignore  CMakeLists.txt  HintsModel.qml  HintsPage.qml  Idler.qml  MainView.qml  MycroftMark2.colors  README.md  Settings.qml  SettingsPage.qml  StatusIndicator.qml  TextDelegate.qml  TextImageDelegate.qml  TimeDelegate.qml  config-mycroft.h.in  dev_setup.sh  main.cpp  main.qml  moc_mycroft.cpp  moc_predefs.h  moc_wsocket.cpp  mycroft.cpp  mycroft.h  net.bs.mycroft.gui.desktop  net.bs.mycroft.gui.device.desktop  net.bs.mycroft.gui.device2.desktop  net.bs.mycroft.gui.device3.desktop  qml.qrc  qrc_qml.cpp  qtquickcontrols2.conf  qtwebsockettest.pro  run.sh  skillloader.cpp  skillloader.h  skills-extra.qrc  skills.qrc  speechintent.cpp  speechintent.h  start_gui_and_mycroft.sh  sync_skills.sh  (+4 more)
+android/: Idler.qml
android/: AndroidManifest.xml
applets/: CMakeLists.txt
applets/launcher/: CMakeLists.txt  Mycroft.directory  applicationsmodel.cpp  applicationsmodel.h  launcherapplet.cpp  launcherapplet.h  mycroft.menu
applets/launcher/package/: metadata.desktop
applets/launcher/package/contents/ui/: main.qml
application/: AboutPage.qml  CMakeLists.txt  HintsDelegate.qml  HintsModel.qml  HintsPage.qml  Idler.qml  RemoteStt.qml  SettingsPage.qml  ai.mycroft.gui-app.desktop  android-build-apk  android-build-openssl1  appsettings.cpp  appsettings.h  keyfilter.cpp  keyfilter.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  speechintent.cpp
application/android/: AndroidManifest.xml  AndroidManifest.xml.in  CMakeLists.txt
application/android/res/drawable/: splash.xml
application/android/res/values/: apptheme.xml
autotests/: CMakeLists.txt  currentweather.qml  delegatewithloader.qml  forecast.qml  modeltest.cpp  servertest.cpp  stresstest.cpp  subdelegate1.qml  subdelegate2.qml  sunny.json  wiki.qml
containments/: CMakeLists.txt
containments/fullscreen/: metadata.desktop
containments/mark2/: CMakeLists.txt  metadata.desktop  mycroftmark2.cpp  mycroftmark2.h
containments/mark2/contents/ui/: VirtualKeyboard.qml  VirtualKeyboardLoader.qml  VolumeFeedbackGraphics.qml  main.qml  main.qmlc
containments/mark2/contents/ui/panel/: metadata.desktop
containments/mark2/contents/ui/panel/contents/ui/: LayoutManager.js  SlidingPanel.qml  TaskWidget.qml  WindowControl.qml
containments/mark2/contents/ui/panel/contents/ui/quicksettings/: BrightnessSlider.qmlc  Delegate.qml  Delegate.qmlc  DisableMycroftDelegate.qmlc  HomeDelegate.qmlc  QuickSettings.qml  QuickSettings.qmlc  SliderBase.qml  SliderBase.qmlc  SystemSettingsDelegate.qml  SystemSettingsDelegate.qmlc  VolumeSlider.qml  VolumeSlider.qmlc
containments/mark2/package/contents/ui/: NetworkingLoader.qml  VirtualKeyboardLoader.qml  VolumeFeedbackGraphics.qml  main.qml
containments/mark2/package/contents/ui/networking/: Connecting.qml  Fail.qml  NetworkConnect.qml  NetworkItem.qml  SelectNetwork.qml  Success.qml
containments/mark2/package/contents/ui/networking/animations/: fail.json
containments/mark2/package/contents/ui/panel/contents/ui/: SlidingPanel.qml  SlidingPanel.qmlc  main.qml  test.qml
containments/mark2/package/contents/ui/panel/contents/ui/quicksettings/: BrightnessSlider.qml  HomeDelegate.qml  MuteDelegate.qml  QuickSettings.qml  RebootDelegate.qml  ShutdownDelegate.qml  SliderBase.qml  WirelessDelegate.qml
containments/panel/: CMakeLists.txt  mycroftpanel.cpp  mycroftpanel.h
containments/panel/package/: metadata.desktop
containments/panel/package/contents/ui/: LayoutManager.js  SlidingPanel.qml  TaskWidget.qml  WindowControl.qml  main.qml  test.qml
containments/panel/package/contents/ui/quicksettings/: BrightnessSlider.qml  Delegate.qml  DisableMycroftDelegate.qml  HomeDelegate.qml  QuickSettings.qml  SliderBase.qml  SystemSettingsDelegate.qml  VolumeSlider.qml
data/: mycroft-gui-core-loader.in  mycroft-gui-core-stop.in
documentation/: README.md
documentation/skill-example/: README.md  __init__.py
icons/: CMakeLists.txt
import/: CMakeLists.txt  abstractdelegate.cpp  abstractdelegate.h  abstractskillview.cpp  abstractskillview.h  activeskillsmodel.cpp  activeskillsmodel.h  audiorec.cpp  audiorec.h  controllerconfig.h.in  delegate.cpp  delegate.h  delegatesmodel.cpp  delegatesmodel.h  filereader.cpp  filereader.h  globalsettings.cpp  globalsettings.h  intentwatcher.cpp  intentwatcher.h  mycroft.qrc  mycroftcontroller.cpp  mycroftcontroller.h  mycroftplugin.cpp  mycroftplugin.h  plugins.qmltypes  qmldir  sessiondatamap.cpp  sessiondatamap.h  sessiondatamodel.cpp  sessiondatamodel.h  skillloader.cpp  skillloader.h
import/qml/: AudioPlayer.qml  AutoFitLabel.qml  BoxLayout.qml  Delegate.qml  DelegateBase.qml  PaginatedDelegate.qml  PaginatedText.qml  PaginationBase.qml  ProportionalDelegate.qml  ScrollableDelegate.qml  SkillView.qml  SlideShow.qml  SlideshowDelegate.qml  SlidingImage.qml  StackSkillView.qml  StatusIndicator.qml  VideoPlayer.qml
import/qml/private/: ImageBackground.qml
lookandfeel/: metadata.desktop
lookandfeel/contents/: defaults  layout.js
panel/: SlidingPanel.qml  test.qml
panel/quicksettings/: BrightnessSlider.qml  Delegate.qml  DisableMycroftDelegate.qml  HomeDelegate.qml  QuickSettings.qml  SliderBase.qml  SystemSettingsDelegate.qml  VolumeSlider.qml
skill-uis/Fallback/: main.qml
skill-uis/Text/: main.qml
skill-uis/Video/: SeekControl.qml  main.qml
skill-uis/Wikipedia/: main.qml  test.qml
skills/components/: BasicDelegateBase.qml
skills/fallback/: Main.qml  main.qml
skills/joke/: Main.qml  Main.qmlc
skills/joking/: Main.qml
skills/pairing/: Main.qml  WebViewLoader.qml
skills/recipe/: Main.qml
skills/spelling/: Main.qml
skills/time/: ClockFace.qml  Hand.qml  Main.qml
skills/video/: Main.qml  SeekControl.qml  main.qml  test.qml
skills/wikipedia/: Main.qml  test.qml  test2.qml
tests/: BoxLayoutTest.qml  multiresultsview.qml  multiresultsview.qmlc  paginationtest.qml  paginationtest.qmlc  scrollableDelegateTest.qml  scrollableDelegateTest2.qml  statusIndicatorTest.qml
ui_prototypes/: Eye.qml  alarm.qml  face.qml
(+35 files in other folders)
